terminando con los estilos con SCSS

--- a/Passwort Generetor/index.html
+++ b/Passwort Generetor/index.html
@@ -15,7 +15,7 @@
 <body>
 
     <div class="container">
-        <h2 class="title">Password Gene</h2>
+        <h2 class="title">Password Generated</h2>
 
         <div class="result">
             <div class="result__title field-title">Generated Password</div>
