PokeApi table-poke

--- a/PokeApi2/index.html
+++ b/PokeApi2/index.html
@@ -12,25 +12,34 @@
 </head>
 
 <body>
-    <form action="" onsubmit="searchPokemon(event)">
-        <input type="text" name="pokemon" autocomplete="off">
-    </form>
-    <div id="data-poke-card" class="poke-card" id="poke-card">
-        <div id="data-poke-name" class="name">Pokedex</div>
-        <div id="data-poke-img-container" class="img-container">
-            <img id="data-poke-img" class="poke-img" src="./img/poke-shadow.png" />
-        </div>
-        <div class="poke-data-basic">
-            <div id="data-poke-height"></div>
-            <div id="data-poke-id"></div>
-            <div id="data-poke-weight"></div>
-        </div>
-        <div id="data-poke-types" class="poke-types"></div>
-        <div id="data-poke-stats" class="poke-stats"></div>
-        
-        <div id="data-poke-moves" class="poke-moves"></div>
-    </div>
+    <footer>
+        <section>
+            <form action="" onsubmit="searchPokemon(event)">
+                <input type="text" name="pokemon" autocomplete="off">
+            </form>
+            <div id="data-poke-card" class="poke-card" id="poke-card">
+                <div id="data-poke-name" class="name">Pokedex</div>
+                <div id="data-poke-img-container" class="img-container">
+                    <img id="data-poke-img" class="poke-img" src="./img/poke-shadow.png" />
+                </div>
+                <div class="poke-data-basic">
+                    <div id="data-poke-height"></div>
+                    <div id="data-poke-id"></div>
+                    <div id="data-poke-weight"></div>
+                </div>
+                <div id="data-poke-types" class="poke-types"></div>
+                <div id="data-poke-stats" class="poke-stats"></div>
+
+                <div id="data-poke-moves" class="poke-moves"></div>
+            </div>
+        </section>
+        <section>
+            <img src="./img/International_Pokémon_logo.svg">
+            <nav class="poke-list-card">
+                <div class="poke-list" id="table-poke"></div>
+            </nav>
+        </section>
+    </footer>
 </body>
 
 </html>
-
