--- a/PokeApi2/index.html
+++ b/PokeApi2/index.html
@@ -30,19 +30,17 @@
                 <input type="text" name="pokemon" autocomplete="off" placeholder="Search Pokedex">
             </form>
             <nav id="data-poke-card" class="poke-card" id="poke-card">
-                <div id="data-poke-name" class="name">Pokedex</div>
-
+                <h2 id="data-poke-name" class="name">Pokedex</h2>
                 <div id="data-poke-img-container" class="img-container">
                     <img id="data-poke-img" class="poke-img" src="./img/poke-shadow.png" />
                 </div>
+                <div id="data-poke-stats" class="poke-stats"></div>
                 <div class="poke-data-basic">
                     <div id="data-poke-height"></div>
                     <div id="data-poke-id"></div>
                     <div id="data-poke-weight"></div>
                 </div>
-                <div id="data-poke-stats" class="poke-stats"></div>
                 <div id="data-poke-types" class="poke-types"></div>
-
                 <div id="data-poke-moves" class="poke-moves"></div>
             </nav>
 
