PokeApi terminando con la poke card

--- a/PokeApi2/index.html
+++ b/PokeApi2/index.html
@@ -46,6 +46,8 @@
 
         </aside>
         <aside>
+            <div class="Session" id="poke-generations">
+            </div>
             <nav class="table-poke">
                 <div class="poke-list" id="table-poke"></div>
             </nav>
