--- a/PokeApi2/index.html
+++ b/PokeApi2/index.html
@@ -16,10 +16,13 @@
         <nav>
             <img src="./img/perfil.png" alt="">
             <ul>
-                <li>Git</li>
-                <li>link</li>
-                <li>Youtube</li>
-                <li>Discort</li>
+                <li><a href="https://github.com/stvnmc" target="_blank">Git</a></li>
+                <li><a href="https://www.linkedin.com/in/steven-marchena-caballero-b95a22263/" target="_blank">Link</a>
+                </li>
+                <li><a href="" target="_blank">Youtube</a></li>
+                <li><a href="" target="_blank">Discort</a>
+                    <!-- <div class="discort">cuatromc#6034</div> -->
+                </li>
             </ul>
         </nav>
     </header>
@@ -48,7 +51,7 @@
         <aside>
             <div class="Session" id="poke-generations">
             </div>
-            <nav class="table-poke">
+            <nav class="table-poke" id="table">
                 <div class="poke-list" id="table-poke"></div>
             </nav>
         </aside>
