--- a/PokeApi2/index.html
+++ b/PokeApi2/index.html
@@ -15,15 +15,13 @@
     <header>
         <nav>
             <img src="./img/perfil.png" alt="">
-            <ul>
+            <div>
                 <li><a href="https://github.com/stvnmc" target="_blank">Git</a></li>
                 <li><a href="https://www.linkedin.com/in/steven-marchena-caballero-b95a22263/" target="_blank">Link</a>
                 </li>
                 <li><a href="" target="_blank">Youtube</a></li>
-                <li><a href="" target="_blank">Discort</a>
-                    <!-- <div class="discort">cuatromc#6034</div> -->
-                </li>
-            </ul>
+                <li><a href="https://www.instagram.com/cuatrommc/" target="_blank">Instagram</a></li>
+            </div>
         </nav>
     </header>
     <section>
@@ -49,7 +47,7 @@
 
         </aside>
         <aside>
-            <div class="Session" id="poke-generations">
+            <div class="session" id="poke-generations">
             </div>
             <nav class="table-poke" id="table">
                 <div class="poke-list" id="table-poke"></div>
