PokeApi mejorando el codigo

--- a/PokeApi2/index.html
+++ b/PokeApi2/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokedex</title>
+    <link rel="shortcut icon" href="img/avatar.png">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
     <script src="script.js" type="text/javascript" defer></script>
     <link href="styles.css" rel="stylesheet" />
@@ -41,7 +42,36 @@
             </nav>
         </aside>
     </section>
-    <footer>
+    <footer class="inner-footer">
+        <img src="img/dugtrio-pokemon.gif" alt="">
+        <div class="child-footer">
+            <h3>Lado derecho</h3>
+            <p>El lado izquierdo es donde saldra la la informacion del pokemon con: Image ,Estadisticas ,Peso ,Altura
+                ,Numero ,Tipos y Cuatro habilidades aleatores de puede aprender.
+            </p>
+        </div>
+        <div class="child-footer">
+            <h3>Lado derecho</h3>
+            <p>El lado derecho es una lista con todos los pokemones de las diferentes temporadas existentes hasta el
+                momento</p>
+        </div>
+        <div class="child-footer">
+            <h3>Contact US</h3>
+            <ul>
+                <li>
+                    <i class="fa-sharp fa-solid fa-user"></i>
+                    Steven Marchena caballero
+                </li>
+                <li>
+                    <i class="fa-brands fa-whatsapp"></i>
+                    +506-64427301
+                </li>
+                <li>
+                    <i class="fa-solid fa-envelope"></i>
+                    stvnmc123@gmail.com
+                </li>
+            </ul>
+        </div>
     </footer>
 
     <script src="https://kit.fontawesome.com/9050b2ac4e.js" crossorigin="anonymous"></script>
