--- a/PokeApi2/index.html
+++ b/PokeApi2/index.html
@@ -44,34 +44,36 @@
     </section>
     <footer class="inner-footer">
         <img src="img/dugtrio-pokemon.gif" alt="">
-        <div class="child-footer">
-            <h3>Lado derecho</h3>
-            <p>El lado izquierdo es donde saldra la la informacion del pokemon con: Image ,Estadisticas ,Peso ,Altura
-                ,Numero ,Tipos y Cuatro habilidades aleatores de puede aprender.
-            </p>
-        </div>
-        <div class="child-footer">
-            <h3>Lado derecho</h3>
-            <p>El lado derecho es una lista con todos los pokemones de las diferentes temporadas existentes hasta el
-                momento</p>
-        </div>
-        <div class="child-footer">
-            <h3>Contact US</h3>
-            <ul>
-                <li>
-                    <i class="fa-sharp fa-solid fa-user"></i>
-                    Steven Marchena caballero
-                </li>
-                <li>
-                    <i class="fa-brands fa-whatsapp"></i>
-                    +506-64427301
-                </li>
-                <li>
-                    <i class="fa-solid fa-envelope"></i>
-                    stvnmc123@gmail.com
-                </li>
-            </ul>
-        </div>
+        <h1>Review</h1>
+        <nav>
+            <div class="child-footer">
+                <h3>Left side</h3>
+                <p>The left side is where the information of the pokemon will appear with: Image, Statistics, Weight,
+                    Height, Number, Types and Four random abilities that can be learned.
+                </p>
+            </div>
+            <div class="child-footer">
+                <h3>Right side</h3>
+                <p>The right side is a list with all the pokemons of the different seasons existing until now.</p>
+            </div>
+            <div class="child-footer">
+                <h3>Contact US</h3>
+                <ul>
+                    <li>
+                        <i class="fa-sharp fa-solid fa-user"></i>
+                        Steven Marchena caballero
+                    </li>
+                    <li>
+                        <i class="fa-brands fa-whatsapp"></i>
+                        +506-64427301
+                    </li>
+                    <li>
+                        <i class="fa-solid fa-envelope"></i>
+                        stvnmc123@gmail.com
+                    </li>
+                </ul>
+            </div>
+        </nav>
     </footer>
 
     <script src="https://kit.fontawesome.com/9050b2ac4e.js" crossorigin="anonymous"></script>
